Update padding for game_container to ensure proper spacing and layout on small screen Size

--- a/src/Components/Game/Game.css
+++ b/src/Components/Game/Game.css
@@ -17,7 +17,7 @@ body {
 
 .game_container {
   margin: 20px;
-  padding: 15px;
+  padding: 20px;
   max-width: 1200px;
   background-color: rgba(0, 0, 0, 0.5);
   border-radius: 10px;
